# RandKey

./: CMakeLists.txt  README.md  README_zh_cn.md  i18n_lang.hpp  main.cpp  uconv.hpp
.github/workflows/: ci.yml
include/randkey/: charset_registry.hpp  encoding.hpp  generator.hpp  options.hpp  random_engine.hpp
include/randkey/i18n/: catalog.hpp  messages.hpp
include/randkey/platform/: encoding.hpp  language.hpp  random_device.hpp
src/: charset_registry.cpp  encoding.cpp  generator.cpp  main.cpp  options.cpp  random_engine.cpp
src/i18n/: catalog.cpp  messages.cpp
src/platform/: encoding.cpp  language.cpp
src/platform/posix/: random_device.cpp
src/platform/windows/: random_device.cpp
tests/: test_charset.cpp  test_cli.cpp  test_generator.cpp  test_main.cpp
